fix layout bugs register form

--- a/styles/register.scss
+++ b/styles/register.scss
@@ -46,3 +46,13 @@
     border: 1px solid red;
     height: 100%;
 }
+.email-area{
+    padding: 0 20px;
+}
+.form-label{
+    font-family: "Strait", sans-serif;
+}
+.form-control{
+    border-radius:0;
+    height: 40px;
+}
